--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -98,3 +98,7 @@ required = ["github.com/osrg/gobgp/gobgp"]
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/sync"
